--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<title>BAMBU188 : Situs Slot Gacor Panen Semangka Gedek x100 Tahun 2024</title>
     <meta name="description" content="Perbaiki permainan Anda dengan BAMBU188 situs slot terbaik yang menjamin kemenangan besar dan jackpot menarik! Bersiaplah untuk takjub saat Anda memutar gulungan dan menyaksikan semangka berjatuhan seolah tidak ada hari esok! Dengan pengganda x1000.">
     <meta name="keywords" content="bambu188, login bambu188, daftar bambu188 bambu188 slot">
+	<meta name="google-site-verification" content="xrdqdndQkCWQJpxW8yGJxMX9Tnw3frKsZ0J9d8i7b80" />
     <meta name="robots" content="index, follow">
     <meta name="page-locale" content="id,en">
     <meta content="true" name="HandheldFriendly">
